# Google-Search-SEO

./: README.md  prototype_scraping.py  pyproject.toml  run_batch.py  run_single_record.py
scripts/: prototype_scraping.py
src/: api_manager.py  helpers.py
